test/fail/entitycomplexpropkind.app
// Encountered: String

application test

entity User {
  authoredPapers -> String
}

entity Paper {}